--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d68fcd">  <td>22/06/12 00:56:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.happy.tests.HomePageTest@4dbb42b7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/06/12 00:56:08</td>   <td>2836</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.happy.tests.HomePageTest@4dbb42b7]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/06/12 00:55:59</td>   <td>-5847</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.happy.tests.HomePageTest@4dbb42b7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/06/12 00:56:07</td>   <td>2025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.login(java.lang.String,int)[pri:0, instance:com.happy.tests.HomePageTest@4dbb42b7]">login</td> 
-  <td>main@1409160703</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>22/06/12 11:03:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.happy.tests.HomePageTest@957e06]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1852777344</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>22/06/12 11:03:36</td>   <td>5934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.login(java.lang.String,int)[pri:0, instance:com.happy.tests.HomePageTest@957e06]">login</td> 
+  <td>main@1852777344</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>22/06/12 11:03:36</td>   <td>6760</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.happy.tests.HomePageTest@957e06]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1852777344</td>   <td></td> </tr>
 </table>
