reports working now with changed testng lib (both in pom and testng library folder should be same version)

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e949d">  <td>22/06/12 01:00:37</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.happy.tests.HomePageTest@32502377]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1990519794</td>   <td></td> </tr>
-<tr bgcolor="7e949d">  <td>22/06/12 01:00:31</td>   <td>-5733</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.happy.tests.HomePageTest@32502377]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1990519794</td>   <td></td> </tr>
-<tr bgcolor="7e949d">  <td>22/06/12 01:00:36</td>   <td>-943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.login(java.lang.String,int)[pri:0, instance:com.happy.tests.HomePageTest@32502377]">login</td> 
-  <td>main@1990519794</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>22/06/12 14:17:47</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.happy.tests.HomePageTest@437da279]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2097905212</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>22/06/12 14:17:54</td>   <td>7086</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.happy.tests.HomePageTest@437da279]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2097905212</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>22/06/12 14:17:53</td>   <td>6079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.login(java.lang.String,int)[pri:0, instance:com.happy.tests.HomePageTest@437da279]">login</td> 
+  <td>main@2097905212</td>   <td></td> </tr>
 </table>
