With working extent report after changing testNG scope from test to compile

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.happy.tests.HomePageTest" class="method navigator-link" hash-for-method="login(hello3@gmail.com, 1237)">login(hello3@gmail.com, 1237)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.happy.tests.HomePageTest" class="method navigator-link" hash-for-method="login(hello@gmail.com, 1234)">login(hello@gmail.com, 1234)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -127,10 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login(hello3@gmail.com, 1237)">
-                  </a> <!-- login(hello3@gmail.com, 1237) -->
+                  <a name="login(hello@gmail.com, 1234)">
+                  </a> <!-- login(hello@gmail.com, 1234) -->
                   <span class="method-name">login</span>
-                  <span class="parameters">(hello3@gmail.com, 1237)</span>
+                  <span class="parameters">(hello@gmail.com, 1234)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -146,7 +146,7 @@
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
-    &lt;listener class-name=&quot;com.happy.util.ListenerNew&quot;/&gt;
+    &lt;listener class-name=&quot;com.happy.util.ListenerClass&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
@@ -194,12 +194,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'com.happy.tests.HomePageTest')
-data.setCell(0, 3, 995);
+data.setCell(0, 3, 1007);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 995 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -231,12 +231,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">login(hello3@gmail.com, 1237)</span>
-                <span class="method-start">6088 ms</span>
+                <span class="method-name">login(hello@gmail.com, 1234)</span>
+                <span class="method-start">6856 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">7093 ms</span>
+                <span class="method-start">7875 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
