--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>testng.xml</span>
+                    <span>testngRegression.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.happy.tests.HomePageTest" class="method navigator-link" hash-for-method="login(hello@gmail.com, 1234)">login(hello@gmail.com, 1234)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.happy.tests.HomePageTest" class="method navigator-link" hash-for-method="login(hello3@gmail.com, 1237)">login(hello3@gmail.com, 1237)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -127,10 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login(hello@gmail.com, 1234)">
-                  </a> <!-- login(hello@gmail.com, 1234) -->
+                  <a name="login(hello3@gmail.com, 1237)">
+                  </a> <!-- login(hello3@gmail.com, 1237) -->
                   <span class="method-name">login</span>
-                  <span class="parameters">(hello@gmail.com, 1234)</span>
+                  <span class="parameters">(hello3@gmail.com, 1237)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -138,7 +138,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/Users/yogi/Java/Happy/testng.xml</span>
+            <span class="header-content">/Users/yogi/Java/Happy/src/test/resources/com/happy/testsuites/testngRegression.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,12 +194,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'com.happy.tests.HomePageTest')
-data.setCell(0, 3, 1007);
+data.setCell(0, 3, 884);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 884 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -231,12 +231,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">login(hello@gmail.com, 1234)</span>
-                <span class="method-start">6856 ms</span>
+                <span class="method-name">login(hello3@gmail.com, 1237)</span>
+                <span class="method-start">5989 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">7875 ms</span>
+                <span class="method-start">6881 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
