--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81a7ac">  <td>22/06/14 15:54:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.happy.tests.HomePageTest@437da279]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2097905212</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>22/06/14 15:54:25</td>   <td>7871</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.happy.tests.HomePageTest@437da279]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2097905212</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>22/06/14 15:54:24</td>   <td>6852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.login(java.lang.String,int)[pri:0, instance:com.happy.tests.HomePageTest@437da279]">login</td> 
-  <td>main@2097905212</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>22/06/18 12:39:40</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.happy.tests.HomePageTest@15a34df2]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@304354378</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>22/06/18 12:39:40</td>   <td>-892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.login(java.lang.String,int)[pri:0, instance:com.happy.tests.HomePageTest@15a34df2]">login</td> 
+  <td>main@304354378</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>22/06/18 12:39:34</td>   <td>-6874</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.happy.tests.HomePageTest@15a34df2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@304354378</td>   <td></td> </tr>
 </table>
